add layout and styling for main and all the api calls

--- a/src/index.html
+++ b/src/index.html
@@ -48,10 +48,15 @@
           <p>Categories / <span id="selected-route">Assets</span></p>
         </header>
         <div class="main">
-          <h2>My <span id="selected-title">Assets</span></h2>
+          <h2>
+            My <span id="selected-title">Assets</span><span id="add">+</span>
+          </h2>
+          <div id="spinner">
+            <img src="../assets/images/spinner.gif" alt="loading gif" />
+          </div>
+
           <!-- dynamicly populated -->
           <div class="items"></div>
-          <button id="start">Start</button>
         </div>
       </main>
     </div>
