make the header fixed and finish add asset working fine

--- a/src/add.html
+++ b/src/add.html
@@ -10,7 +10,7 @@
   <body>
     <h3>Add <span class="selected-route">Asset</span></h3>
     <div class="main-form">
-      <form action="http://localhost:4000/api/v1/assets" method="POST">
+      <form>
         <input type="text" placeholder="Name" name="name" />
         <textarea placeholder="Description" name="description"></textarea>
         <input type="text" placeholder="Location" name="city" /><br />
