implement adding new item for all categories

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
 
       <!-- main -->
       <main>
+        <!-- header -->
         <header>
           <div class="dragable"></div>
           <p>Categories / <span id="selected-route">Assets</span></p>
@@ -50,6 +51,7 @@
             My <span id="selected-title">Assets</span><span id="add">+</span>
           </h2>
         </header>
+
         <div class="main">
           <div id="spinner">
             <img src="../assets/images/spinner.gif" alt="loading gif" />
