--- a/src/add.html
+++ b/src/add.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../assets/css/add.css" />
   </head>
   <body>
-    <h3>Add <span class="selected-route">Asset</span></h3>
+    <h3>Add <span id="add-category">Asset</span></h3>
     <div class="main-form">
       <form>
         <input type="text" placeholder="Name" name="name" />
