add edit (halfway)

--- a/src/edit.html
+++ b/src/edit.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../assets/css/add.css" />
   </head>
   <body>
-    <h3>Edit <span id="add-category">Asset</span></h3>
+    <h3>Edit <span id="add-category">Item</span></h3>
     <div class="main-form">
       <form>
         <input type="text" placeholder="Name" name="name" />
