FINISH! commit before build (packaging)

--- a/src/add.html
+++ b/src/add.html
@@ -14,6 +14,9 @@
         <input type="text" placeholder="Name" name="name" />
         <textarea placeholder="Description" name="description"></textarea>
         <input type="text" placeholder="Location" name="city" /><br />
+        <div class="datepicker">
+          <span>Expire Date</span> <input type="date" id="date" />
+        </div>
         <div class="keywords">
           <input type="text" placeholder="Keywords" /><button
             class="add-keyword"
